generator/src/main/java/antlr/SMLParser.java
// Generated from D:/Laci/egyetem/szakdolgozat/SML/src/main/java/antlr\SML.g4 by ANTLR 4.6
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, STATE_DELIMITER=2, STATE_ATTRIBUTES_DELIMITER=3, STATE_START_DELIMITER=4, 
		STATE_GOAL_DELIMITER=5, OPERATOR_DELIMITER=6, OPERATOR_DESCRIPTION_DELIMITER=7, 
		OPERATOR_PRECONDITION_DELIMITER=8, OPERATOR_EFFECT_DELIMITER=9, KEYWORD_FOR=10, 
		KEYWORD_PARAM=11, KEYWORD_FROM=12, KEYWORD_TO=13, KEYWORD_BY=14, KEYWORD_TIMES=15, 
		KEYWORD_ATTRIBUTE=16, KEYWORD_VAR=17, KEYWORD_COST=18, KEYWORD_NAME=19, 
		KEYWORD_IS=20, KEYWORD_OF=21, KEYWORD_SET=22, KEYWORD_MATRIX=23, KEYWORD_WORD=24, 
		KEYWORD_NUMBER=25, KEYWORD_MINIMUM=26, KEYWORD_MAXIMUM=27, KEYWORD_SUM=28, 
		KEYWORD_AVERAGE=29, KEYWORD_UNION=30, KEYWORD_INTERSECT=31, KEYWORD_DIFFERENCE=32, 
		KEYWORD_ADD=33, KEYWORD_REMOVE=34, KEYWORD_CARDINALITY=35, KEYWORD_AND=36, 
		KEYWORD_OR=37, KEYWORD_NOT=38, KEYWORD_INF=39, SYMBOL_EQUAL=40, SYMBOL_NOT_EQUAL=41, 
		SYMBOL_LESSER=42, SYMBOL_GREATER=43, SYMBOL_LESSER_OR_EQUAL=44, SYMBOL_GREATER_OR_EQUAL=45, 
		SYMBOL_ADDITION=46, SYMBOL_SUBSTRACT=47, SYMBOL_MULTIPLICATION=48, SYMBOL_DIVISION=49, 
		SYMBOL_ASSIGN=50, SYMBOL_REFERENCE=51, SYMBOL_COMMA=52, SYMBOL_QUOTE=53, 
		SYMBOL_SINGLE_QOUTE=54, SYMBOL_LPAREN=55, SYMBOL_RPAREN=56, SYMBOL_LBRACE=57, 
		SYMBOL_RBRACE=58, SYMBOL_LBRACK=59, SYMOBL_RBRACK=60, INT=61, FLOAT=62, 
		SIGN=63, PARAM_NAME=64, CHAR=65, WS=66;
	public static final int
		RULE_expr = 0, RULE_state_expr = 1, RULE_state_description = 2, RULE_state_description_line = 3, 
		RULE_state_start = 4, RULE_state_goal = 5, RULE_operator_expr = 6, RULE_operator_description = 7, 
		RULE_operator_cost = 8, RULE_operator_precondition = 9, RULE_operator_effect = 10, 
		RULE_attr_struct = 11, RULE_attr_type = 12, RULE_comparator = 13, RULE_binary_operator = 14, 
		RULE_unary_operator = 15, RULE_boolean_operator = 16, RULE_expression = 17, 
		RULE_name_defining_expression = 18, RULE_parameter_description_line = 19, 
		RULE_for_statement = 20, RULE_attr_name = 21, RULE_attr_reference = 22, 
		RULE_parameterized_attr_reference = 23, RULE_matrix_reference = 24, RULE_parameterized_matrix_reference = 25, 
		RULE_dimension = 26, RULE_normal_reference = 27, RULE_parameterized_reference = 28, 
		RULE_reference = 29, RULE_number = 30, RULE_word = 31;
	public static final String[] ruleNames = {
		"expr", "state_expr", "state_description", "state_description_line", "state_start", 
		"state_goal", "operator_expr", "operator_description", "operator_cost", 
		"operator_precondition", "operator_effect", "attr_struct", "attr_type", 
		"comparator", "binary_operator", "unary_operator", "boolean_operator", 
		"expression", "name_defining_expression", "parameter_description_line", 
		"for_statement", "attr_name", "attr_reference", "parameterized_attr_reference", 
		"matrix_reference", "parameterized_matrix_reference", "dimension", "normal_reference", 
		"parameterized_reference", "reference", "number", "word"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\\'", "'STATE:'", "'STATE_ATTRIBUTES:'", "'STATE_START:'", "'STATE_GOAL:'", 
		"'OPERATORS:'", "'OPERATOR_DESCRIPTION:'", "'OPERATOR_PRECONDITION:'", 
		"'OPERATOR_EFFECT:'", "'for'", "'param'", "'from'", "'to'", "'by'", "'times'", 
		"'Attr'", "'var'", "'cost'", "'name'", "'is'", "'of'", "'set'", "'matrix'", 
		"'word'", "'number'", "'min'", "'max'", "'sum'", "'avg'", "'union'", "'intersect'", 
		"'difference'", "'add'", "'remove'", "'card'", "'and'", "'or'", "'not'", 
		"'inf'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", 
		"'/'", "'='", "'$'", "','", "'\"'", "'''", "'('", "')'", "'{'", "'}'", 
		"'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "STATE_DELIMITER", "STATE_ATTRIBUTES_DELIMITER", "STATE_START_DELIMITER", 
		"STATE_GOAL_DELIMITER", "OPERATOR_DELIMITER", "OPERATOR_DESCRIPTION_DELIMITER", 
		"OPERATOR_PRECONDITION_DELIMITER", "OPERATOR_EFFECT_DELIMITER", "KEYWORD_FOR", 
		"KEYWORD_PARAM", "KEYWORD_FROM", "KEYWORD_TO", "KEYWORD_BY", "KEYWORD_TIMES", 
		"KEYWORD_ATTRIBUTE", "KEYWORD_VAR", "KEYWORD_COST", "KEYWORD_NAME", "KEYWORD_IS", 
		"KEYWORD_OF", "KEYWORD_SET", "KEYWORD_MATRIX", "KEYWORD_WORD", "KEYWORD_NUMBER", 
		"KEYWORD_MINIMUM", "KEYWORD_MAXIMUM", "KEYWORD_SUM", "KEYWORD_AVERAGE", 
		"KEYWORD_UNION", "KEYWORD_INTERSECT", "KEYWORD_DIFFERENCE", "KEYWORD_ADD", 
		"KEYWORD_REMOVE", "KEYWORD_CARDINALITY", "KEYWORD_AND", "KEYWORD_OR", 
		"KEYWORD_NOT", "KEYWORD_INF", "SYMBOL_EQUAL", "SYMBOL_NOT_EQUAL", "SYMBOL_LESSER", 
		"SYMBOL_GREATER", "SYMBOL_LESSER_OR_EQUAL", "SYMBOL_GREATER_OR_EQUAL", 
		"SYMBOL_ADDITION", "SYMBOL_SUBSTRACT", "SYMBOL_MULTIPLICATION", "SYMBOL_DIVISION", 
		"SYMBOL_ASSIGN", "SYMBOL_REFERENCE", "SYMBOL_COMMA", "SYMBOL_QUOTE", "SYMBOL_SINGLE_QOUTE", 
		"SYMBOL_LPAREN", "SYMBOL_RPAREN", "SYMBOL_LBRACE", "SYMBOL_RBRACE", "SYMBOL_LBRACK", 
		"SYMOBL_RBRACK", "INT", "FLOAT", "SIGN", "PARAM_NAME", "CHAR", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExprContext extends ParserRuleContext {
		public TerminalNode STATE_DELIMITER() { return getToken(SMLParser.STATE_DELIMITER, 0); }
		public State_exprContext state_expr() {
			return getRuleContext(State_exprContext.class,0);
		}
		public TerminalNode OPERATOR_DELIMITER() { return getToken(SMLParser.OPERATOR_DELIMITER, 0); }
		public TerminalNode EOF() { return getToken(SMLParser.EOF, 0); }
		public Name_defining_expressionContext name_defining_expression() {
			return getRuleContext(Name_defining_expressionContext.class,0);
		}
		public List<Operator_exprContext> operator_expr() {
			return getRuleContexts(Operator_exprContext.class);
		}
		public Operator_exprContext operator_expr(int i) {
			return getRuleContext(Operator_exprContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(STATE_DELIMITER);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD_NAME) {
				{
				setState(65);
				name_defining_expression();
				}
			}

			setState(68);
			state_expr();
			setState(69);
			match(OPERATOR_DELIMITER);
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				operator_expr();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OPERATOR_DESCRIPTION_DELIMITER );
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_exprContext extends ParserRuleContext {
		public State_descriptionContext state_description() {
			return getRuleContext(State_descriptionContext.class,0);
		}
		public State_startContext state_start() {
			return getRuleContext(State_startContext.class,0);
		}
		public State_goalContext state_goal() {
			return getRuleContext(State_goalContext.class,0);
		}
		public State_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterState_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitState_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitState_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_exprContext state_expr() throws RecognitionException {
		State_exprContext _localctx = new State_exprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_state_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			state_description();
			setState(78);
			state_start();
			setState(79);
			state_goal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_descriptionContext extends ParserRuleContext {
		public TerminalNode STATE_ATTRIBUTES_DELIMITER() { return getToken(SMLParser.STATE_ATTRIBUTES_DELIMITER, 0); }
		public List<State_description_lineContext> state_description_line() {
			return getRuleContexts(State_description_lineContext.class);
		}
		public State_description_lineContext state_description_line(int i) {
			return getRuleContext(State_description_lineContext.class,i);
		}
		public State_descriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterState_description(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitState_description(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitState_description(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_descriptionContext state_description() throws RecognitionException {
		State_descriptionContext _localctx = new State_descriptionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(STATE_ATTRIBUTES_DELIMITER);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				state_description_line();
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KEYWORD_ATTRIBUTE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_description_lineContext extends ParserRuleContext {
		public Attr_nameContext attr_name() {
			return getRuleContext(Attr_nameContext.class,0);
		}
		public TerminalNode KEYWORD_IS() { return getToken(SMLParser.KEYWORD_IS, 0); }
		public Attr_structContext attr_struct() {
			return getRuleContext(Attr_structContext.class,0);
		}
		public TerminalNode KEYWORD_OF() { return getToken(SMLParser.KEYWORD_OF, 0); }
		public Attr_typeContext attr_type() {
			return getRuleContext(Attr_typeContext.class,0);
		}
		public State_description_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_description_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterState_description_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitState_description_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitState_description_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_description_lineContext state_description_line() throws RecognitionException {
		State_description_lineContext _localctx = new State_description_lineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_state_description_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			attr_name();
			setState(88);
			match(KEYWORD_IS);
			setState(89);
			attr_struct();
			setState(90);
			match(KEYWORD_OF);
			setState(91);
			attr_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_startContext extends ParserRuleContext {
		public TerminalNode STATE_START_DELIMITER() { return getToken(SMLParser.STATE_START_DELIMITER, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public State_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterState_start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitState_start(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitState_start(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_startContext state_start() throws RecognitionException {
		State_startContext _localctx = new State_startContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_state_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(STATE_START_DELIMITER);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & ((1L << (KEYWORD_FOR - 10)) | (1L << (KEYWORD_VAR - 10)) | (1L << (KEYWORD_MINIMUM - 10)) | (1L << (KEYWORD_MAXIMUM - 10)) | (1L << (KEYWORD_SUM - 10)) | (1L << (KEYWORD_AVERAGE - 10)) | (1L << (KEYWORD_UNION - 10)) | (1L << (KEYWORD_ADD - 10)) | (1L << (KEYWORD_REMOVE - 10)) | (1L << (KEYWORD_CARDINALITY - 10)) | (1L << (KEYWORD_INF - 10)) | (1L << (SYMBOL_REFERENCE - 10)) | (1L << (SYMBOL_QUOTE - 10)) | (1L << (SYMBOL_LPAREN - 10)) | (1L << (SYMBOL_LBRACE - 10)) | (1L << (INT - 10)) | (1L << (FLOAT - 10)) | (1L << (SIGN - 10)) | (1L << (PARAM_NAME - 10)))) != 0)) {
				{
				{
				setState(94);
				expression(0);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_goalContext extends ParserRuleContext {
		public TerminalNode STATE_GOAL_DELIMITER() { return getToken(SMLParser.STATE_GOAL_DELIMITER, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public State_goalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterState_goal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitState_goal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitState_goal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_goalContext state_goal() throws RecognitionException {
		State_goalContext _localctx = new State_goalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_state_goal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(STATE_GOAL_DELIMITER);
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				expression(0);
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & ((1L << (KEYWORD_FOR - 10)) | (1L << (KEYWORD_VAR - 10)) | (1L << (KEYWORD_MINIMUM - 10)) | (1L << (KEYWORD_MAXIMUM - 10)) | (1L << (KEYWORD_SUM - 10)) | (1L << (KEYWORD_AVERAGE - 10)) | (1L << (KEYWORD_UNION - 10)) | (1L << (KEYWORD_ADD - 10)) | (1L << (KEYWORD_REMOVE - 10)) | (1L << (KEYWORD_CARDINALITY - 10)) | (1L << (KEYWORD_INF - 10)) | (1L << (SYMBOL_REFERENCE - 10)) | (1L << (SYMBOL_QUOTE - 10)) | (1L << (SYMBOL_LPAREN - 10)) | (1L << (SYMBOL_LBRACE - 10)) | (1L << (INT - 10)) | (1L << (FLOAT - 10)) | (1L << (SIGN - 10)) | (1L << (PARAM_NAME - 10)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_exprContext extends ParserRuleContext {
		public Operator_descriptionContext operator_description() {
			return getRuleContext(Operator_descriptionContext.class,0);
		}
		public Operator_preconditionContext operator_precondition() {
			return getRuleContext(Operator_preconditionContext.class,0);
		}
		public Operator_effectContext operator_effect() {
			return getRuleContext(Operator_effectContext.class,0);
		}
		public Operator_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterOperator_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitOperator_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitOperator_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operator_exprContext operator_expr() throws RecognitionException {
		Operator_exprContext _localctx = new Operator_exprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_operator_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			operator_description();
			setState(107);
			operator_precondition();
			setState(108);
			operator_effect();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_descriptionContext extends ParserRuleContext {
		public TerminalNode OPERATOR_DESCRIPTION_DELIMITER() { return getToken(SMLParser.OPERATOR_DESCRIPTION_DELIMITER, 0); }
		public Name_defining_expressionContext name_defining_expression() {
			return getRuleContext(Name_defining_expressionContext.class,0);
		}
		public Operator_costContext operator_cost() {
			return getRuleContext(Operator_costContext.class,0);
		}
		public List<Parameter_description_lineContext> parameter_description_line() {
			return getRuleContexts(Parameter_description_lineContext.class);
		}
		public Parameter_description_lineContext parameter_description_line(int i) {
			return getRuleContext(Parameter_description_lineContext.class,i);
		}
		public Operator_descriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).enterOperator_description(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMLListener ) ((SMLListener)listener).exitOperator_description(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMLVisitor ) return ((SMLVisitor<? extends T>)visitor).visitOperator_description(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operator_descriptionContext operator_description() throws RecognitionException {
		Operator_descriptionContext _localctx = new Operator_descriptionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operator_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(OPERATOR_DESCRIPTION_DELIMITER);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD_NAME) {
				{
				setState(111);
				name_defining_expression();
				}
			}

			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD_COST) {
				{
				setState(114);
				operator_cost();
				}
			}
